fix: h1 to contrast

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -110,7 +110,7 @@ img {
 }
 
 h1 {
-  color: #fe6b75;
+  color: #ffda00;
   // animation: glow 1.5s ease-in-out infinite alternate;
 }
 h2 { color: #dba663; }
